fix wrap css for config setting. fixes #2

--- a/style.less
+++ b/style.less
@@ -1,3 +1,3 @@
 textarea[name="config[plugin____dbquery____dsn]"] {
-    white-space: nowrap;
+    white-space: pre;
 }
